charts-man/k8s-dashboard/template.yaml
---
# Source: k8s-dashboard/charts/kong/templates/service-kong-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-dashboard-kong-proxy
  namespace: default
  labels:
    app.kubernetes.io/name: kong
    helm.sh/chart: kong-2.46.0
    app.kubernetes.io/instance: "k8s-dashboard"
    app.kubernetes.io/managed-by: "Helm"
    
    app.kubernetes.io/version: "3.8"
    enable-metrics: "true"
spec:
  type: ClusterIP
  ports:
  - name: kong-proxy-tls
    port: 443
    targetPort: 8443
    protocol: TCP
  selector:
    app.kubernetes.io/name: kong
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: "k8s-dashboard"
---
# Source: k8s-dashboard/templates/services/api.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Service
apiVersion: v1
metadata:
  labels:
    helm.sh/chart: k8s-dashboard-1.0.0
    app.kubernetes.io/instance: k8s-dashboard
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: k8s-dashboard
    app.kubernetes.io/name: k8s-dashboard-api
    app.kubernetes.io/version: 1.13.0
    app.kubernetes.io/component: api
  annotations:
    
  name: k8s-dashboard-api
  namespace: k8s-dashboard
spec:
  type: ClusterIP
  ports:
    - name: api
      port: 8000
      protocol: TCP
      
      
      
  
  selector:
    app.kubernetes.io/instance: k8s-dashboard
    app.kubernetes.io/part-of: k8s-dashboard
    app.kubernetes.io/name: k8s-dashboard-api
---
# Source: k8s-dashboard/templates/services/auth.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Service
apiVersion: v1
metadata:
  labels:
    helm.sh/chart: k8s-dashboard-1.0.0
    app.kubernetes.io/instance: k8s-dashboard
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: k8s-dashboard
    app.kubernetes.io/name: k8s-dashboard-auth
    app.kubernetes.io/version: 1.3.0
    app.kubernetes.io/component: auth
  annotations:
    
  name: k8s-dashboard-auth
  namespace: k8s-dashboard
spec:
  type: ClusterIP
  ports:
    - name: auth
      port: 8000
      protocol: TCP
      
      
      
  
  selector:
    app.kubernetes.io/instance: k8s-dashboard
    app.kubernetes.io/part-of: k8s-dashboard
    app.kubernetes.io/name: k8s-dashboard-auth
---
# Source: k8s-dashboard/templates/services/metrics-scraper.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Service
apiVersion: v1
metadata:
  labels:
    helm.sh/chart: k8s-dashboard-1.0.0
    app.kubernetes.io/instance: k8s-dashboard
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: k8s-dashboard
    app.kubernetes.io/name: k8s-dashboard-metrics-scraper
    app.kubernetes.io/version: 1.2.2
    app.kubernetes.io/component: metrics-scraper
  annotations:
    
  name: k8s-dashboard-metrics-scraper
  namespace: k8s-dashboard
spec:
  type: ClusterIP
  ports:
    # Name is intentionally not used here as it breaks the connection between API <-> Scraper
    # Named ports have an issue when trying to connect through in-cluster service proxy.
    - port: 8000
      protocol: TCP
      
      
      
  
  selector:
    app.kubernetes.io/instance: k8s-dashboard
    app.kubernetes.io/part-of: k8s-dashboard
    app.kubernetes.io/name: k8s-dashboard-metrics-scraper
---
# Source: k8s-dashboard/templates/services/web.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Service
apiVersion: v1
metadata:
  labels:
    helm.sh/chart: k8s-dashboard-1.0.0
    app.kubernetes.io/instance: k8s-dashboard
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: k8s-dashboard
    app.kubernetes.io/name: k8s-dashboard-web
    app.kubernetes.io/version: 1.7.0
    app.kubernetes.io/component: web
  annotations:
    
  name: k8s-dashboard-web
  namespace: k8s-dashboard
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 8000
      protocol: TCP
      
      
      
  
  selector:
    app.kubernetes.io/instance: k8s-dashboard
    app.kubernetes.io/part-of: k8s-dashboard
    app.kubernetes.io/name: k8s-dashboard-web
---
# Source: k8s-dashboard/charts/kong/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-dashboard-kong
  namespace:  default
  labels:
    app.kubernetes.io/name: kong
    helm.sh/chart: kong-2.46.0
    app.kubernetes.io/instance: "k8s-dashboard"
    app.kubernetes.io/managed-by: "Helm"
    
    app.kubernetes.io/version: "3.8"
    app.kubernetes.io/component: app
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: kong
      app.kubernetes.io/component: app
      app.kubernetes.io/instance: "k8s-dashboard"

  template:
    metadata:
      annotations:
        kuma.io/service-account-token-volume: k8s-dashboard-kong-token
        kuma.io/gateway: "enabled"
        traffic.sidecar.istio.io/includeInboundPorts: ""
      labels:
        app.kubernetes.io/name: kong
        helm.sh/chart: kong-2.46.0
        app.kubernetes.io/instance: "k8s-dashboard"
        app.kubernetes.io/managed-by: "Helm"
        
        app.kubernetes.io/version: "3.8"
        app.kubernetes.io/component: app
        app: k8s-dashboard-kong
        
        version: "3.8"
    spec:
      serviceAccountName: k8s-dashboard-kong
      automountServiceAccountToken: false
      
      containers:
      - name: "proxy"
        image: kong:3.8
        imagePullPolicy: IfNotPresent
        securityContext:
        
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        lifecycle:
          preStop:
            exec:
              command:
              - kong
              - quit
              - --wait=15
        ports:
        - name: proxy-tls
          containerPort: 8443
          protocol: TCP
        - name: status
          containerPort: 8100
          protocol: TCP
        volumeMounts:
          - name: k8s-dashboard-kong-prefix-dir
            mountPath: /kong_prefix/
          - name: k8s-dashboard-kong-tmp
            mountPath: /tmp
          - name: kong-custom-dbless-config-volume
            mountPath: /kong_dbless/
          
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /status/ready
            port: status
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /status
            port: status
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          {} 
      securityContext:
        {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: k8s-dashboard-kong-prefix-dir
          emptyDir:
            sizeLimit: 256Mi
        - name: k8s-dashboard-kong-tmp
          emptyDir:
            sizeLimit: 1Gi
        - name: k8s-dashboard-kong-token
          projected:
            sources:
            - serviceAccountToken:
                expirationSeconds: 3607
                path: token
            - configMap:
                items:
                - key: ca.crt
                  path: ca.crt
                name: kube-root-ca.crt
            - downwardAPI:
                items:
                - fieldRef:
                    apiVersion: v1
                    fieldPath: metadata.namespace
                  path: namespace
        - name: kong-custom-dbless-config-volume
          configMap:
            name: kong-dbless-config
---
# Source: k8s-dashboard/templates/deployments/api.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    helm.sh/chart: k8s-dashboard-1.0.0
    app.kubernetes.io/instance: k8s-dashboard
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: k8s-dashboard
    app.kubernetes.io/name: k8s-dashboard-api
    app.kubernetes.io/version: 1.13.0
    app.kubernetes.io/component: api
  annotations:
    
  name: k8s-dashboard-api
  namespace: k8s-dashboard
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: k8s-dashboard
      app.kubernetes.io/part-of: k8s-dashboard
      app.kubernetes.io/name: k8s-dashboard-api
  template:
    metadata:
      labels:
        helm.sh/chart: k8s-dashboard-1.0.0
        app.kubernetes.io/instance: k8s-dashboard
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: k8s-dashboard
        app.kubernetes.io/name: k8s-dashboard-api
        app.kubernetes.io/version: 1.13.0
        app.kubernetes.io/component: api
      annotations:
        checksum/config: 061c403d546f654e19cb481469edf32572bcb6562890271121ced1fc3e0c1212
    spec:
      containers:
        - name: k8s-dashboard-api
          image: "docker.io/kubernetesui/dashboard-api:1.13.0"
          imagePullPolicy: IfNotPresent
          args:
            - --namespace=default
            - --metrics-scraper-service-name=k8s-dashboard-metrics-scraper

          ports:
          
            - containerPort: 8000
              name: api
              protocol: TCP
          volumeMounts:
          
            - mountPath: /tmp
              name: tmp-volume
          securityContext:
          
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 2001
            runAsUser: 1001
          resources:
          
            limits:
              cpu: 250m
              memory: 400Mi
            requests:
              cpu: 100m
              memory: 200Mi

      automountServiceAccountToken: true
      securityContext:
      
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
      
        - emptyDir: {}
          name: tmp-volume
      serviceAccountName: k8s-dashboard-api
---
# Source: k8s-dashboard/templates/deployments/auth.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    helm.sh/chart: k8s-dashboard-1.0.0
    app.kubernetes.io/instance: k8s-dashboard
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: k8s-dashboard
    app.kubernetes.io/name: k8s-dashboard-auth
    app.kubernetes.io/version: 1.13.0
    app.kubernetes.io/component: auth
  annotations:
    
  name: k8s-dashboard-auth
  namespace: k8s-dashboard
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: k8s-dashboard
      app.kubernetes.io/part-of: k8s-dashboard
      app.kubernetes.io/name: k8s-dashboard-auth
  template:
    metadata:
      labels:
        helm.sh/chart: k8s-dashboard-1.0.0
        app.kubernetes.io/instance: k8s-dashboard
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: k8s-dashboard
        app.kubernetes.io/name: k8s-dashboard-auth
        app.kubernetes.io/version: 1.3.0
        app.kubernetes.io/component: auth
      annotations:
        checksum/config: 1e903468938c2d85ae433bc0cc7f15f9ba46cb3ea5c03cf9c5858cb653505b04
    spec:
      containers:
        - name: k8s-dashboard-auth
          image: "docker.io/kubernetesui/dashboard-auth:1.3.0"
          imagePullPolicy: IfNotPresent
          args:

          ports:
          
            - containerPort: 8000
              name: auth
              protocol: TCP
          volumeMounts:
          
            - mountPath: /tmp
              name: tmp-volume
          securityContext:
          
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 2001
            runAsUser: 1001
          resources:
          
            limits:
              cpu: 250m
              memory: 400Mi
            requests:
              cpu: 100m
              memory: 200Mi

      automountServiceAccountToken: true
      securityContext:
      
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
      
        - emptyDir: {}
          name: tmp-volume
---
# Source: k8s-dashboard/templates/deployments/metrics-scraper.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    helm.sh/chart: k8s-dashboard-1.0.0
    app.kubernetes.io/instance: k8s-dashboard
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: k8s-dashboard
    app.kubernetes.io/name: k8s-dashboard-metrics-scraper
    app.kubernetes.io/version: 1.2.2
    app.kubernetes.io/component: metrics-scraper
  annotations:
    
  name: k8s-dashboard-metrics-scraper
  namespace: k8s-dashboard
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: k8s-dashboard
      app.kubernetes.io/part-of: k8s-dashboard
      app.kubernetes.io/name: k8s-dashboard-metrics-scraper
  template:
    metadata:
      labels:
        helm.sh/chart: k8s-dashboard-1.0.0
        app.kubernetes.io/instance: k8s-dashboard
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: k8s-dashboard
        app.kubernetes.io/name: k8s-dashboard-metrics-scraper
        app.kubernetes.io/version: 1.2.2
        app.kubernetes.io/component: metrics-scraper
      annotations:
    spec:
      containers:
        - name: k8s-dashboard-metrics-scraper
          image: "docker.io/kubernetesui/dashboard-metrics-scraper:1.2.2"
          imagePullPolicy: IfNotPresent

          ports:
          
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
          
            - mountPath: /tmp
              name: tmp-volume
          securityContext:
          
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 2001
            runAsUser: 1001
          resources:
          
            limits:
              cpu: 250m
              memory: 400Mi
            requests:
              cpu: 100m
              memory: 200Mi
          livenessProbe:
          
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 30

      automountServiceAccountToken: true
      securityContext:
      
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
      
        - emptyDir: {}
          name: tmp-volume

      serviceAccountName: k8s-dashboard-metrics-scraper
---
# Source: k8s-dashboard/templates/deployments/web.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    helm.sh/chart: k8s-dashboard-1.0.0
    app.kubernetes.io/instance: k8s-dashboard
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: k8s-dashboard
    app.kubernetes.io/name: k8s-dashboard-web
    app.kubernetes.io/version: 1.7.0
    app.kubernetes.io/component: web
  annotations:
    
  name: k8s-dashboard-web
  namespace: k8s-dashboard
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: k8s-dashboard
      app.kubernetes.io/part-of: k8s-dashboard
      app.kubernetes.io/name: k8s-dashboard-web
  template:
    metadata:
      labels:
        helm.sh/chart: k8s-dashboard-1.0.0
        app.kubernetes.io/instance: k8s-dashboard
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: k8s-dashboard
        app.kubernetes.io/name: k8s-dashboard-web
        app.kubernetes.io/version: 1.7.0
        app.kubernetes.io/component: web
      annotations:
    spec:
      containers:
        - name: k8s-dashboard-web
          image: "docker.io/kubernetesui/dashboard-web:1.7.0"
          imagePullPolicy: IfNotPresent
          args:
            - --namespace=default
            - --settings-config-map-name=k8s-dashboard-web-settings
          
            - --enable-insecure-login
            - --enable-insecure-logout
            - --enable-insecure-skip-verify

          ports:
          
            - containerPort: 8000
              name: web
              protocol: TCP
          volumeMounts:
          
            - mountPath: /tmp
              name: tmp-volume
          securityContext:
          
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 2001
            runAsUser: 1001
          resources:
          
            limits:
              cpu: 250m
              memory: 400Mi
            requests:
              cpu: 100m
              memory: 200Mi

      automountServiceAccountToken: true
      securityContext:
      
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
      
        - emptyDir: {}
          name: tmp-volume

      serviceAccountName: k8s-dashboard-web
---
# Source: k8s-dashboard/templates/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: k8s-dashboard
  name: k8s-dashboard-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: k8s.aki.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-dashboard-kong-proxy
                port:
                  number: 443
---
# Source: k8s-dashboard/templates/extras/manifests.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
# Source: k8s-dashboard/templates/extras/servicemonitor.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
# Source: k8s-dashboard/templates/networking/ingress-st.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
# Source: k8s-dashboard/templates/security/networkpolicy.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
# Source: k8s-dashboard/templates/security/pdb.yaml
# Copyright 2017 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
